--- a/configs/config-hpc.yml
+++ b/configs/config-hpc.yml
@@ -3,25 +3,21 @@ notes:
 use_wandb: False
 wandb_entity: winniethepooh
 
-annot_dir: 
-annot_train_file:
-annot_val_file: 
-annot_test_file: 
-
-
-outdir: 
+animal_cat: bird
+outdir: results
 dataset: ../datasets/raptor_individuals_cropped
+cache_path: dataset/dataframe/cache_raptors.csv
+splitter: closed
 split_ratio: 0.8
-cache_path: dataset/dataframe/cache.csv
 
-backbone_name: resnet50
 model_architecture: TripletModel
+backbone_name: resnet50
 checkpoint: 
 preprocess_lvl: 3
 
 batch_size: 4
-img_size: 256
-epochs: 150
+img_size: 224
+epochs: 100
 save_interval: 10
 n_gpu: 1
 num_workers: 2
@@ -48,7 +44,7 @@ early_stopping:
   mode: min
 
 solver:
-  OPT: adam  # adam, sgd
+  OPT: adam  # adam, SGD
   WEIGHT_DECAY: 0.001
   MOMENTUM: 0.9  # only when OPT is sgd
   BASE_LR: 0.0001
