--- a/configs/config-hpc.yml
+++ b/configs/config-hpc.yml
@@ -5,8 +5,8 @@ wandb_entity: winniethepooh
 
 animal_cat: bird
 outdir: results
-dataset: ../datasets/raptor_individuals_cropped
-cache_path: dataset/dataframe/cache_raptors.csv
+dataset: /proj/nobackup/aiforeagles/raptor_individuals_cropped/
+cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_raptors.csv
 splitter: closed
 split_ratio: 0.8
 
