--- a/configs/config-hpc.yml
+++ b/configs/config-hpc.yml
@@ -15,7 +15,7 @@ only_cache: True # if only_cache, will not run mmpose inference / segmentation a
 model_architecture: TripletModel
 backbone_name: resnet50
 checkpoint: 
-preprocess_lvl: 3
+preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
 
 batch_size: 32
 img_size: 224
@@ -32,7 +32,7 @@ transforms:
   mean: [0.485, 0.456, 0.406]
   std: [0.229, 0.224, 0.225]
 
-embedding_size: 128
+embedding_size: 768
 triplet_loss:
   margin: 0.2
   mining_type: semihard
