--- a/configs/config-hpc-whaleshark.yml
+++ b/configs/config-hpc-whaleshark.yml
@@ -18,8 +18,8 @@ backbone_name: resnet50
 checkpoint: 
 preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
 
-batch_size: 32
-img_size: 224
+batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
+img_size: 224 # 224, 256, 384, 512
 epochs: 100
 save_interval: 10
 n_gpu: 1
@@ -33,10 +33,10 @@ transforms:
   mean: [0.485, 0.456, 0.406]
   std: [0.229, 0.224, 0.225]
 
-embedding_size: 768
+embedding_size: 128 # choose between: 128, 256, 512, 768
 triplet_loss:
-  margin: 0.2
-  mining_type: semihard
+  margin: 0.5 # choose between: 0.2, 0,5, 0.7 (higher encourages harder triplet mining and stronger gradients)
+  mining_type: semihard # choose between: semihard, hard (more challenging triplets)
   distance_matrix: euclidean
 megadescriptor: 
   margin: 
@@ -53,7 +53,7 @@ early_stopping:
 
 solver:
   OPT: adam  # adam, SGD
-  WEIGHT_DECAY: 0.001
+  WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
   BASE_LR: 0.0001
   LR_SCHEDULER: multistep  # step, multistep, reduce_on_plateau
