--- a/configs/config-hpc-whaleshark.yml
+++ b/configs/config-hpc-whaleshark.yml
@@ -33,11 +33,17 @@ transforms:
   mean: [0.485, 0.456, 0.406]
   std: [0.229, 0.224, 0.225]
 
-embedding_size: 128 # choose between: 128, 256, 512, 768
+use_fc: true
+embedding_size: 768 # choose between: 128, 256, 512, 768, 2048
+
 triplet_loss:
   margin: 0.5 # choose between: 0.2, 0,5, 0.7 (higher encourages harder triplet mining and stronger gradients)
   mining_type: semihard # choose between: semihard, hard (more challenging triplets)
   distance_matrix: euclidean
+arcface_loss:
+  margin: 0.328
+  scale: 49.326
+  theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
 megadescriptor: 
   margin: 
   scale: 
@@ -60,5 +66,13 @@ solver:
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
   LR_STEP_MILESTONES: [20, 30]  # only when LR_SCHEDULER is multistep
+  
+  use_swa: False #Stochastic Weight Averaging (SWA) to help improve generalization
+  swa_lr: 0.035
+  swa_start: 24
+  lr_max: 0.0005
+  lr_start: 1.71e-06
+  lr_ramp_ep: 15
+  lr_decay: 0.8
 
 re_ranking: True
