--- a/configs/config-hpc-whaleshark.yml
+++ b/configs/config-hpc-whaleshark.yml
@@ -77,10 +77,14 @@ solver:
 
 re_ranking: True
 
-param_grid: False
 param_grid:
+  use_grid: False
   embedding_sizes: [128, 256, 512, 768, 2048]
-  margins: [0.2, 0.5, 0.7]
-  mining_types: ['semihard', 'hard']
   learning_rates: [0.001, 0.01, 0.1]
-  re_ranking: [True, False]
+  triplet:
+    margins: [0.1, 0.2, 0.5, 0.7]
+    mining_types: ['all', 'semihard', 'hard']
+  arcface:
+    margins: [0.25,0.5,0.75]
+    scales: [32,64,128]
+    # theta_zeros: [0.1, 0.5, 0.785, 1.0]
