--- a/configs/config-hpc-whaleshark.yml
+++ b/configs/config-hpc-whaleshark.yml
@@ -62,7 +62,7 @@ solver:
   WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
   BASE_LR: 0.0001
-  LR_SCHEDULER: multistep  # step, multistep, reduce_on_plateau
+  LR_SCHEDULER: step  # step, multistep, reduce_on_plateau
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
   LR_STEP_MILESTONES: [20, 30]  # only when LR_SCHEDULER is multistep
@@ -79,12 +79,12 @@ re_ranking: True
 
 param_grid:
   use_grid: True
-  embedding_sizes: [128, 256, 512, 768, 2048]
-  learning_rates: [0.001, 0.01, 0.1]
+  embedding_sizes: [128, 768, 2048]
+  learning_rates: [0.0001, 0.001, 0.005]
   triplet:
-    margins: [0.1, 0.2, 0.5, 0.7]
-    mining_types: ['all', 'semihard', 'hard']
+    margins: [0.2, 0.5, 0.7]
+    mining_types: ['semihard', 'hard']
   arcface:
-    margins: [0.25,0.5,0.75]
-    scales: [32,64,128]
+    margins: [0.25,0.5]
+    scales: [32,64]
     # theta_zeros: [0.1, 0.5, 0.785, 1.0]
