--- a/configs/config-local-whaleshark.yml
+++ b/configs/config-local-whaleshark.yml
@@ -1,29 +1,29 @@
-project_name: eagleID-whaleshark
+project_name: local-eagleID-whaleshark
 notes: 
-use_wandb: True
+use_wandb: False
 wandb_entity: winniethepooh
 
 wildlife_name: whaleshark
 animal_cat: fish
-outdir: results
-dataset: /proj/nobackup/aiforeagles/EDA-whaleshark/
-cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_whaleshark.csv
+outdir: ./results
+dataset: /Users/amee/Documents/code/master-thesis/datasets/EDA-whaleshark/
+cache_path: ./dataset/dataframe/cache_whaleshark.csv
 splitter: closed
 split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
 
-model_architecture: TripletModel
-backbone_name: resnet50
+model_architecture: EfficientNet # FusionModel, EfficientNet
+backbone_name: efficientnet_b0 # resnet18
 checkpoint: 
 preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
 
-batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
+batch_size: 32 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 100
+epochs: 2
 save_interval: 10
-n_gpu: 1
-num_workers: 8
+n_gpu: 0
+num_workers: 2
 gpu_ids: 
 seed: 42
 
@@ -33,7 +33,7 @@ transforms:
   mean: [0.485, 0.456, 0.406]
   std: [0.229, 0.224, 0.225]
 
-embedding_size: 768 # choose between: 128, 256, 512, 768, 2048
+embedding_size: 128 # choose between: 128, 256, 512, 768, 2048
 
 triplet_loss:
   margin: 0.5 # choose between: 0.2, 0,5, 0.7 (higher encourages harder triplet mining and stronger gradients)
