--- a/configs/config-local-whaleshark.yml
+++ b/configs/config-local-whaleshark.yml
@@ -13,8 +13,8 @@ split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
 
-model_architecture: EfficientNet # FusionModel, EfficientNet
-backbone_name: efficientnet_b0 # resnet18
+model_architecture: TransformerModel # TripletModel, FusionModel, EfficientNet, TransformerModel
+backbone_name: swin_tiny_patch4_window7_224 # efficientnet_b0, resnet18
 checkpoint: 
 preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
 
