--- a/configs/config-sweep-hpc.yml
+++ b/configs/config-sweep-hpc.yml
@@ -5,7 +5,7 @@ metric:
   goal: minimize
 parameters:
   model_architecture:
-    values: ['TripletModel', 'EfficientNet', 'FusionModel']
+    values: ['EfficientNet', 'FusionModel']
   wildlife_name:
     values: ['whaleshark', 'raptors']
   batch_size:
