--- a/configs/config-sweepbayes-hpc.yml
+++ b/configs/config-sweepbayes-hpc.yml
@@ -5,7 +5,7 @@ metric:
   goal: minimize
 parameters:
   model_architecture:
-    values: ['TripletModel', 'EfficientNet', 'FusionModel']
+    values: ['EfficientNet', 'FusionModel']
   wildlife_name:
     values: ['whaleshark', 'raptors']
   batch_size:
@@ -33,5 +33,5 @@ parameters:
       BASE_LR:
         values: [0.0001, 0.001, 0.005]
       LR_SCHEDULER:
-        values: ['step', 'reduce_on_plateau']
+        values: ['reduce_on_plateau']
 
