--- a/configs/config-sweepbayes-hpc.yml
+++ b/configs/config-sweepbayes-hpc.yml
@@ -1,7 +1,7 @@
 name: sweeping-bayes
 method: bayes
 metric:
-  name: train/loss
+  name: train/loss_epoch
   goal: minimize
 parameters:
   model_architecture:
