--- a/configs/config-sweepbayes-hpc.yml
+++ b/configs/config-sweepbayes-hpc.yml
@@ -1,17 +1,19 @@
-name: sweeping-bayes
+name: sweeping-bayes-preprocess-levels
 method: bayes
 metric:
   name: train/loss_epoch
   goal: minimize
 parameters:
   model_architecture:
-    values: ['EfficientNet', 'FusionModel']
+    values: ['TripletModel']
   wildlife_name:
     values: ['whaleshark', 'raptors']
+  preprocess_lvl:
+    values: [1, 2, 3, 4, 5]
   batch_size:
-    values: [64, 128]
+    values: [64]
   embedding_size:
-    values: [128, 768]
+    values: [768]
   triplet_loss:
     parameters:
       margin:
@@ -21,17 +23,17 @@ parameters:
   arcface_loss:
     parameters:
       margin:
-        distribution: normal
-        mu: 0.32
-        sigma: 0.05
+        distribution: 
+        mu:
+        sigma:
       scale:
-        distribution: normal
-        mu: 50
-        sigma: 5
+        distribution: 
+        mu:
+        sigma:
   solver:
     parameters:
       BASE_LR:
-        values: [0.0001, 0.001, 0.005]
+        values: [0.001]
       LR_SCHEDULER:
         values: ['reduce_on_plateau']
 
