sweeep fusion model

--- a/configs/config-sweepbayes-hpc-preprocessing.yml
+++ b/configs/config-sweepbayes-hpc-preprocessing.yml
@@ -5,7 +5,7 @@ metric:
   goal: minimize
 parameters:
   model_architecture:
-    values: ['TripletModel']
+    values: ['FusionModel']
   wildlife_name:
     values: ['whaleshark', 'raptors']
   preprocess_lvl:
