--- a/configs/config-sweepbayes-hpc-preprocessing.yml
+++ b/configs/config-sweepbayes-hpc-preprocessing.yml
@@ -7,9 +7,9 @@ parameters:
   model_architecture:
     values: ['FusionModel']
   wildlife_name:
-    values: ['whaleshark', 'raptors']
+    values: ['whaleshark', 'raptors', 'ATRW', 'BirdIndividualID']
   preprocess_lvl:
-    values: [1, 2, 3, 4, 5]
+    values: [3, 4, 5]
   batch_size:
     values: [64]
   embedding_size:
