--- a/configs/config-local-goleag.yml
+++ b/configs/config-local-goleag.yml
@@ -1,6 +1,6 @@
-project_name: local-eagleID-whaleshark
+project_name: eagleID-goleag
 notes: 
-use_wandb: False
+use_wandb: True
 wandb_entity: winniethepooh
 
 wildlife_name: goleag
@@ -13,17 +13,17 @@ split_ratio: 0.8
 
 only_cache: [True,True] # if only_cache, will not run mmpose inference / segmentation and will only use cache results
 
-model_architecture: EfficientNet # TripletModel, FusionModel, EfficientNet, TransformerModel
-backbone_name: efficientnet_b0 # swin_tiny_patch4_window7_224, efficientnet_b0, resnet18
+model_architecture: FusionModel # TripletModel, FusionModel, EfficientNet, TransformerModel
+backbone_name: resnet18 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
 checkpoint: 
 preprocess_lvl: 3 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
 
 batch_size: 32 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 2
-save_interval: 10
-n_gpu: 0
-num_workers: 2
+epochs: 50
+save_interval: 1
+n_gpu: 1
+num_workers: 8
 gpu_ids: 
 seed: 42
 
@@ -57,8 +57,8 @@ solver:
   OPT: adam  # adam, SGD
   WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
-  BASE_LR: 0.0001
-  LR_SCHEDULER: step  # step, multistep, reduce_on_plateau
+  BASE_LR: 0.001
+  LR_SCHEDULER: reduce_on_plateau  # step, multistep, reduce_on_plateau
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
   LR_STEP_MILESTONES: [20, 30]  # only when LR_SCHEDULER is multistep
