--- a/configs/config-hpc-goleag.yml
+++ b/configs/config-hpc-goleag.yml
@@ -21,13 +21,13 @@ preprocess_lvl: 3 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: componen
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
 epochs: 50
-save_interval: 1
+save_interval: 5
 n_gpu: 1
 num_workers: 8
 gpu_ids: 
 seed: 42
 
-use_gradcam: True
+use_gradcam: False
 
 transforms:
   mean: [0.485, 0.456, 0.406]
