--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -1,4 +1,4 @@
-project_name: eagleID-whaleshark
+project_name: eagleID-raptors
 notes: 
 use_wandb: True
 wandb_entity: winniethepooh
@@ -11,12 +11,12 @@ cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_raptors.c
 splitter: closed
 split_ratio: 0.8
 
-only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
+only_cache: False # if only_cache, will not run mmpose inference / segmentation and will only use cache results
 
 model_architecture: FusionModel # TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
 checkpoint: 
-preprocess_lvl: 1 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
+preprocess_lvl: 3 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
