--- a/configs/config-hpc-multispecies.yml
+++ b/configs/config-hpc-multispecies.yml
@@ -1,13 +1,13 @@
-project_name: eagleID-raptors
+project_name: eagleID-multispecies
 notes: 
 use_wandb: True
 wandb_entity: winniethepooh
 
-wildlife_name: raptors
-animal_cat: bird
+wildlife_name: raptors, BirdIndividualID, ATRW, whaleshark
+animal_cat: bird, bird, mammal, fish
 outdir: results
-dataset: /proj/nobackup/aiforeagles/raptor_individuals_cropped/
-cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_raptors.csv
+dataset: /proj/nobackup/aiforeagles/
+cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_multispecies.csv
 splitter: closed
 split_ratio: 0.8
 
@@ -16,7 +16,7 @@ only_cache: True # if only_cache, will not run mmpose inference / segmentation a
 model_architecture: FusionModel # TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
 checkpoint: 
-preprocess_lvl: 3 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
+preprocess_lvl: 1 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
