--- a/configs/config-hpc-multispecies.yml
+++ b/configs/config-hpc-multispecies.yml
@@ -13,7 +13,7 @@ split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
 
-model_architecture: FusionModel # TripletModel, FusionModel, EfficientNet, TransformerModel
+model_architecture: ResNetPlusModel # ResNetPlusModel, TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
 checkpoint: 
 preprocess_lvl: 4 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
