--- a/configs/config-sweep-raptor-arcface.yml
+++ b/configs/config-sweep-raptor-arcface.yml
@@ -6,6 +6,8 @@ metric:
 parameters:
   arcface_loss:
     parameters:
+      activate:
+        values: [True]  
       margin:
         values: [0.3, 0.5]
       scale:
