--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -7,8 +7,8 @@ wildlife_name: raptors
 animal_cat: bird
 outdir: results
 dataset: /proj/nobackup/aiforeagles/raptor_individuals_cropped/
-cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_raptors.csv # _split.csv if using metadata_split
-splitter: custom_closed # custom_closed / metadata_split 
+cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_raptors_split.csv # _split.csv if using metadata_split
+splitter: metadata_split # custom_closed / metadata_split 
 split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
@@ -40,7 +40,7 @@ embedding_size: 512 # choose between: 128, 256, 512, 768, 2048
 triplet_loss:
   margin: 0.5 # choose between: 0.2, 0,5, 0.7 (higher encourages harder triplet mining and stronger gradients)
   mining_type: semihard # choose between: semihard, hard (more challenging triplets)
-  distance_matrix: cosine
+  distance_matrix: euclidean
 arcface_loss:
   activate: False # Set to False if using triplet loss
   margin: 0.5
