--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -1,3 +1,5 @@
+# BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate
+
 project_name: eagleID-raptors_resnet_arcface
 notes: 
 use_wandb: True
@@ -42,9 +44,9 @@ triplet_loss:
   mining_type: semihard # choose between: semihard, hard (more challenging triplets)
   distance_matrix: cosine
 arcface_loss:
-  activate: False # Set to False if using triplet loss
+  activate: True # Set to False if using triplet loss
   margin: 0.5
-  scale: 50
+  scale: 32
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
   n_classes:
 
