visualize during training validation

--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -1,4 +1,4 @@
-# BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate
+# BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate, epochs
 
 project_name: eagleID-raptors_resnet_preprocesslvls
 notes: 
@@ -23,7 +23,7 @@ preprocess_lvl: 3 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: componen
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 50
+epochs: 20
 save_interval: 10
 n_gpu: 1
 num_workers: 8
@@ -31,6 +31,7 @@ gpu_ids:
 seed: 42
 
 use_gradcam: False
+val_viz: True
 
 transforms:
   mean: [0.485, 0.456, 0.406]
