--- a/configs/config-hpc-ATRWnew.yml
+++ b/configs/config-hpc-ATRWnew.yml
@@ -1,20 +1,20 @@
 # BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate, epochs
 
-project_name: eagleID-raptors_resnet_preprocesslvls
+project_name: eagleID-testing-new
 notes: 
 use_wandb: True
 wandb_entity: winniethepooh
 
-wildlife_name: raptors
-animal_cat: bird
+wildlife_name: ATRW
+animal_cat: mammal
 outdir: results
-dataset: /proj/nobackup/aiforeagles/raptor_individuals_cropped/
-cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_raptors_split.csv # _split.csv if using metadata_split
-splitter: metadata_split # custom_closed / metadata_split 
+dataset: /proj/nobackup/aiforeagles/ATRW/
+cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_ATRW.csv # _split.csv if using metadata_split
+splitter: custom_closed # custom_closed / metadata_split 
 split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
-precompute: True
+precompute: True # PREREQUISITE: Either delete files first or use metadata_split!
 
 model_architecture: ResNetPlusModel # ResNetPlusModel, TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
@@ -23,7 +23,7 @@ preprocess_lvl: 3 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: componen
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 20
+epochs: 30
 save_interval: 10
 n_gpu: 1
 num_workers: 8
@@ -31,7 +31,7 @@ gpu_ids:
 seed: 42
 
 use_gradcam: False
-val_viz: True
+val_viz: False
 
 transforms:
   mean: [0.485, 0.456, 0.406]
