--- a/configs/config-hpc-seal.yml
+++ b/configs/config-hpc-seal.yml
@@ -60,7 +60,7 @@ early_stopping:
   mode: min
 
 solver:
-  OPT: adam  # adam, sgd
+  OPT: sgd  # adam, sgd
   WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
   BASE_LR: 0.01 # if SGD use 0.01 / if Adam use 0.001
