--- a/configs/config-hpc-goleagnew.yml
+++ b/configs/config-hpc-goleagnew.yml
@@ -5,16 +5,16 @@ notes:
 use_wandb: True
 wandb_entity: winniethepooh
 
-wildlife_name: seal
-animal_cat: mammal
+wildlife_name: goleag
+animal_cat: bird
 outdir: results
-dataset: /proj/nobackup/aiforeagles/SealID/
-cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_sealID_split.csv # _split.csv if using metadata_split
-splitter: metadata_split # custom_closed / metadata_split 
+dataset: /proj/nobackup/aiforeagles/raptor_individuals_cropped/
+cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/goleag_cache.csv # _split.csv if using metadata_split
+splitter: custom_closed # custom_closed / metadata_split 
 split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
-precompute: True # PREREQUISITE: Either delete files first or use metadata_split!
+precompute: True
 
 model_architecture: ResNetPlusModel # ResNetPlusModel, TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
@@ -23,7 +23,7 @@ preprocess_lvl: 3 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: componen
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 30
+epochs: 20
 save_interval: 10
 n_gpu: 1
 num_workers: 8
@@ -45,7 +45,7 @@ triplet_loss:
   mining_type: semihard # choose between: semihard, hard (more challenging triplets)
   distance_matrix: cosine
 arcface_loss:
-  activate: False # Set to False if using triplet loss
+  activate: True # Set to False if using triplet loss
   margin: 0.406 # [0.5, 32] or [0.406, 42]
   scale: 42 # [0.50, 32] or [0.406, 42]
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
@@ -60,7 +60,7 @@ early_stopping:
   mode: min
 
 solver:
-  OPT: adam  # adam, sgd
+  OPT: adam  # adam, SGD
   WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
   BASE_LR: 0.01 # if SGD use 0.01 / if Adam use 0.001
