--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -45,7 +45,7 @@ triplet_loss:
   mining_type: semihard # choose between: semihard, hard (more challenging triplets)
   distance_matrix: cosine
 arcface_loss:
-  activate: False # Set to False if using triplet loss
+  activate: True # Set to False if using triplet loss
   margin: 0.406 # [0.5, 32] or [0.406, 42]
   scale: 42 # [0.50, 32] or [0.406, 42]
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
@@ -60,11 +60,11 @@ early_stopping:
   mode: min
 
 solver:
-  OPT: adam  # adam, SGD
+  OPT: adam  # adam, sgd
   WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
   BASE_LR: 0.001 # if SGD use 0.01 / if Adam use 0.001
-  LR_SCHEDULER: reduce_on_plateau  # step, multistep, reduce_on_plateau
+  LR_SCHEDULER: cosine_annealing  # step, multistep, reduce_on_plateau, cosine_annealing
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
   LR_STEP_MILESTONES: [20, 30]  # only when LR_SCHEDULER is multistep
@@ -73,8 +73,7 @@ solver:
   swa_lr: 0.035
   swa_start: 24
   lr_max: 0.0001
-  lr_start: 1e-05
+  lr_start: 3e-06
   lr_ramp_ep: 8
-  lr_decay: 0.8
 
 re_ranking: True
