--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -23,7 +23,7 @@ preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: componen
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 50
+epochs: 60
 save_interval: 10
 n_gpu: 1
 num_workers: 8
@@ -53,7 +53,7 @@ arcface_loss:
 
 early_stopping:
   enabled: False
-  monitor: val/mAP5
+  monitor: val/mAP
   min_delta: 0.0005
   patience: 50
   verbose: true
