--- a/configs/config-hpc-allbirds.yml
+++ b/configs/config-hpc-allbirds.yml
@@ -23,7 +23,7 @@ preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: componen
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 60
+epochs: 80
 save_interval: 10
 n_gpu: 1
 num_workers: 8
@@ -31,7 +31,7 @@ gpu_ids:
 seed: 42
 
 use_gradcam: False
-val_viz: False
+val_viz: True
 
 transforms:
   mean: [0.485, 0.456, 0.406]
