--- a/configs/config-hpc-elephant.yml
+++ b/configs/config-hpc-elephant.yml
@@ -1,6 +1,6 @@
 # BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate, epochs
 
-project_name: eagleID-testing-new
+project_name: eagleID-elephant-preprocess
 notes: 
 use_wandb: True
 wandb_entity: winniethepooh
@@ -9,8 +9,8 @@ wildlife_name: elephant
 animal_cat: mammal
 outdir: results
 dataset: /proj/nobackup/aiforeagles/ELPephant/
-cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_elephant.csv # _split.csv if using metadata_split
-splitter: custom_closed # custom_closed / metadata_split 
+cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_elephants_split.csv # _split.csv if using metadata_split
+splitter: metadata_split # custom_closed / metadata_split 
 split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
@@ -23,7 +23,7 @@ preprocess_lvl: 3 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: componen
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 0
+epochs: 60
 save_interval: 10
 n_gpu: 1
 num_workers: 8
@@ -45,7 +45,7 @@ triplet_loss:
   mining_type: semihard # choose between: semihard, hard (more challenging triplets)
   distance_matrix: cosine
 arcface_loss:
-  activate: False # Set to False if using triplet loss
+  activate: True # Set to False if using triplet loss
   margin: 0.406 # [0.5, 32] or [0.406, 42]
   scale: 42 # [0.50, 32] or [0.406, 42]
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
@@ -53,18 +53,18 @@ arcface_loss:
 
 early_stopping:
   enabled: False
-  monitor: val/mAP5
-  min_delta: 0.0005
-  patience: 50
+  monitor: val/mAP
+  min_delta: 0.01
+  patience: 20
   verbose: true
-  mode: min
+  mode: max
 
 solver:
   OPT: adam  # adam, sgd
   WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
-  BASE_LR: 0.01 # if SGD use 0.01 / if Adam use 0.001
-  LR_SCHEDULER: reduce_on_plateau  # step, multistep, reduce_on_plateau
+  BASE_LR: 0.001 # if SGD use 0.01 / if Adam use 0.001
+  LR_SCHEDULER: cosine_annealing  # step, multistep, reduce_on_plateau, cosine_annealing
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
   LR_STEP_MILESTONES: [20, 30]  # only when LR_SCHEDULER is multistep
@@ -72,9 +72,8 @@ solver:
   use_swa: False #Stochastic Weight Averaging (SWA) to help improve generalization
   swa_lr: 0.035
   swa_start: 24
-  lr_max: 0.0005
-  lr_start: 1.71e-06
-  lr_ramp_ep: 15
-  lr_decay: 0.8
+  lr_max: 0.0001
+  lr_start: 3e-06
+  lr_ramp_ep: 8
 
 re_ranking: True
