--- a/configs/config-sweep-arcface-refinement.yml
+++ b/configs/config-sweep-arcface-refinement.yml
@@ -10,7 +10,7 @@ parameters:
   preprocess_lvl:
     values: [2, 3, 4, 5]
   embedding_size:
-    values: [256, 512]
+    values: [256]
   arcface_loss.margin:
     values: [0.3, 0.4, 0.5]
   arcface_loss.scale:
