--- a/configs/config-sweep-arcface-refinement.yml
+++ b/configs/config-sweep-arcface-refinement.yml
@@ -8,7 +8,7 @@ early_terminate:
   min_iter: 6
 parameters:
   preprocess_lvl:
-    values: [2, 3, 4, 5]
+    values: [3, 4, 5]
   embedding_size:
     values: [256]
   arcface_loss.margin:
@@ -16,4 +16,4 @@ parameters:
   arcface_loss.scale:
     values: [30, 50, 64]
   solver.lr_max:
-    values: [0.001, 0.0005]
+    values: [0.001]
